# marsbots-launcher

./: .gitignore  Dockerfile  README.md  bot.py  docker-compose-db.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  supervisord.example.conf
scaffolding/: character_bot.py
web/: api.py
web/backend/: api.py  const.py
